--- a/about.html
+++ b/about.html
@@ -258,6 +258,8 @@
             </div>
           </div>
 
+          
+
           <!-- <div class="col-lg-5" data-aos="fade">
             <form action="forms/quote.php" method="post" class="php-email-form">
               <h3>Contactanos</h3>
@@ -296,6 +298,36 @@
 
       </div>
     </section>
+    <br>
+    <br>
+    <h1 class="text-center">Nuestros Valores</h1>
+          <div class="container-xxl py-5">
+              <div class="container">
+              <div class="row g-5 align-items-end">
+                      <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">        
+                          <h1 class="mb-4">Mejora Continua</h1>
+                          <p class="mb-4 texto-justificado">Compromiso firme con la promoción de soluciones sostenibles y el respeto al medio ambiente en todas nuestras actividades y servicios.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.5s">
+                              <h1 class="mb-4">Innovación</h1>
+                              <p class="mb-4 texto-justificado">Impulso constante para buscar soluciones creativas y tecnologías limpias que generen un impacto positivo a la sostenibilidad. </p>
+                      </div>
+                      <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.5s">
+                          <h1 class=" mb-4">Honestidad</h1>
+                          <p class="mb-4 texto-justificado">Actuar con honestidad, ética y transparencia en todas nuestras relaciones comerciales y decisiones.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.5s">
+                          <h1 class=" mb-4">Respeto</h1>
+                          <p class="mb-4 texto-justificado">Fomentar un ambiente de trabajo colaborativo y de apoyo mutuo, dentro de SIARSA y con nuestros clientes.</p>
+                      </div>
+                      <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.5s">
+                          <h1 class=" mb-4">Responsabilidad</h1>
+                          <p class="mb-4 texto-justificado">Asumir la responsabilidad de nuestras acciones y resultados, para trabajar con un enfoque a largo plazo en el bienestar del medio ambiente y de la comunidad.</p>
+                      </div>
+                      <br>
+                  </div>
+              </div>
+          </div>   
     <!-- ======= Alt Services Section 2 ======= -->
     <!-- <section id="alt-services-2" class="alt-services section-bg">
       <div class="container" data-aos="fade-up">
