--- a/about.html
+++ b/about.html
@@ -234,7 +234,6 @@
           </div>
         </div>
 
-      </div>
     </section><!-- End Alt Services Section -->
     <section id="get-started" class="get-started section-bg">
       <div class="container">
@@ -306,7 +305,7 @@
               <div class="row g-5 align-items-end">
                       <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s">        
                           <h1 class="mb-4">Mejora Continua</h1>
-                          <p class="mb-4 texto-justificado">Compromiso firme con la promoción de soluciones sostenibles y el respeto al medio ambiente en todas nuestras actividades y servicios.</p>
+                          <p class="mb-4 texto-justificado">Compromiso firme con la renovacion de soluciones sostenibles y el respeto al medio ambiente en todas nuestras actividades y servicios.</p>
                       </div>
                       <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.5s">
                               <h1 class="mb-4">Innovación</h1>
