--- a/index.html
+++ b/index.html
@@ -352,9 +352,13 @@
 
           <div class="col-lg-10 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
-              <h3>Expertos en HVAC & R.</h3>
-              <p class="texto-justificado">Considerados como los mejores dentro del ramo con mas de $ años de experiencia.</p>
-              <p class="texto-justificado">Contamos con los mejores expertos en la materia para poder ofrecerte calidad en nuestro servicio.</p>
+              <h3>¿Porque elegir a SIARSA?</h3>
+              <h5>Tecnologìa Avanzada</h5>
+              <p class="texto-justificado">Incorporamos las últimas tecnologías en nuestros sistemas para garantizar un rendimiento óptimo y duradero. Desde sistemas de climatización inteligentes hasta controles remotos fáciles de usar, te ofrecemos lo mejor en innovación.</p>
+              <h5>Silenciosos y sin Problemas</h5>
+              <p class="texto-justificado">Nuestros aires acondicionados y sistemas de refrigeración son conocidos por su funcionamiento silencioso y sin problemas. Disfruta de un ambiente tranquilo y fresco sin molestias ruidosas ni interrupciones.</p>
+              <h5>Servicio y Soporte</h5>
+              <p class="texto-justificado">No solo vendemos productos, sino que también ofrecemos un excepcional servicio postventa. Nuestro equipo de expertos está disponible para ayudarte con la instalación, el mantenimiento y cualquier consulta que puedas tener.</p>
             </div>
           </div>
 
