--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
     <!-- ======= Services Section ======= -->
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
+        <h1 class="text-center">Nuestros Servicios</h1>
+        <br>
         <div class="row gy-4 posts-list">
 
           <div class="col-xl-4 col-md-6">
