--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -216,7 +216,7 @@
 
             </article>
 
-            <div class="post-author d-flex align-items-center">
+            <!-- <div class="post-author d-flex align-items-center">
               <img src="img/logo-siarsa.png" class="rounded-circle flex-shrink-0" alt="">
               <div>
                 <h4>@siarsacompany</h4>
@@ -229,7 +229,7 @@
                  Síguenos en nuestras redes para mayor contacto.
                 </p>
               </div>
-            </div>
+            </div> -->
 
             <!-- <div class="comments">
 
