--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img class="img-fluid" src="img/logo-siarsa.png" alt="">        
+        <img class="img-fluid" src="img/logo-siarsa.png" alt="">
+        <!-- <h1>Logo SIARSA<span>.</span></h1> -->
       </a>
-      <a href="mailto:contacto@vaettir.com.mx" style="color: white">contacto@vaettir.com.mx</a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
