--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - Projects</title>
+  <title>SIARSA</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -88,11 +88,7 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Projects</h2>
-        <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Projects</li>
-        </ol>
+        <h2></h2>
 
       </div>
     </div><!-- End Breadcrumbs -->
@@ -306,13 +302,13 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>UpConstruction</h3>
-              <p>
+              <h3>SIARSA</h3>
+              <!-- <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 5589 55488 55<br>
                 <strong>Email:</strong> info@example.com<br>
-              </p>
+              </p> -->
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
