--- a/contact.html
+++ b/contact.html
@@ -233,16 +233,16 @@
             </ul>
           </div>
 
-          <!-- <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Servicios</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="venta.html">Venta e Instalación</a></li>
+              <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
+              <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
+              <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
+              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
             </ul>
-          </div> -->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nuestros Horarios</h4>
@@ -278,12 +278,6 @@
           &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-            href="https://themewagon.com">ThemeWagon</a> -->
         </div>
       </div>
     </div>
