--- a/projects.html
+++ b/projects.html
@@ -303,12 +303,10 @@
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>SIARSA</h3>
-              <!-- <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
-              </p> -->
+              <p class="texto-justificado">
+                <strong>Telefono:</strong>&nbsp;<a href="tel:+525566751741" style="color: white">55-7929-0992</a><br>
+                <strong>Correo:</strong><a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
+              </p>
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
@@ -316,51 +314,56 @@
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
-          </div><!-- End footer info column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Menu</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="about.html">Nosotros</a></li>
+              <li><a href="services.html">Servicios</a></li>
+              <li><a href="contact.html">Contacto</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
+            <h4>Servicios</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="venta.html">Venta e Instalación</a></li>
+              <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
+              <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
+              <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
+              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Hic solutasetp</h4>
+            <h4>Nuestros Horarios</h4>
             <ul>
-              <li><a href="#">Molestiae accusamus iure</a></li>
-              <li><a href="#">Excepturi dignissimos</a></li>
-              <li><a href="#">Suscipit distinctio</a></li>
-              <li><a href="#">Dilecta</a></li>
-              <li><a href="#">Sit quas consectetur</a></li>
+              <li>Lunes</li>
+              <li>Martes</li>
+              <li>Miercoles</li>
+              <li>Jueves</li>
+              <li>viernes</li>
+              <li>Sabado</li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Nobis illum</h4>
+            <br>
+            <br>
             <ul>
-              <li><a href="#">Ipsam</a></li>
-              <li><a href="#">Laudantium dolorum</a></li>
-              <li><a href="#">Dinera</a></li>
-              <li><a href="#">Trodelas</a></li>
-              <li><a href="#">Flexo</a></li>
+              <li>7:00 AM – 5:00 PM</li>
+              <li>7:00 AM – 5:00 PM</li>
+              <li>7:00 AM – 5:00 PM</li>
+              <li>7:00 AM – 5:00 PM</li>
+              <li>7:00 AM – 5:00 PM</li>
+              <li>7:00 AM – 12:00 PM</li>
             </ul>
-          </div><!-- End footer links column-->
+          </div>
+
+        </div>
+      </div>
 
         </div>
       </div>
@@ -372,10 +375,6 @@
           &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
             href="https://themewagon.com">ThemeWagon</a>
         </div>
