--- a/sistemasespeciales.html
+++ b/sistemasespeciales.html
@@ -510,16 +510,16 @@
             </ul>
           </div>
 
-          <!-- <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Servicios</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="venta.html">Venta e Instalación</a></li>
+              <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
+              <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
+              <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
+              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
             </ul>
-          </div> -->
+          </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Nuestros Horarios</h4>
