--- a/reparacionyservicios.html
+++ b/reparacionyservicios.html
@@ -426,7 +426,7 @@
   <footer id="footer" class="footer">
 
    
-    ++ <div class="footer-content position-relative">
+    <div class="footer-content position-relative">
       <div class="container">
         <div class="row">
 
