--- a/venta.html
+++ b/venta.html
@@ -81,7 +81,7 @@
   <main id="main">
 
     
-    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/blog/blog-1.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
         <h2>Venta e Instalación</h2>
       </div>
