--- a/reparacionyservicios.html
+++ b/reparacionyservicios.html
@@ -498,7 +498,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados. <script>document.write(new Date().getFullYear())</script>
         </div>
       </div>
     </div>
