--- a/sistemasespeciales.html
+++ b/sistemasespeciales.html
@@ -81,8 +81,8 @@
   <main id="main">
 
     
-    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
-      <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/los-diferentes-tipos-de-sistemas-de-aire-acondicionado-y-cual-es-el-mejor-para-ti-climagava.jpg');">
+      <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade"
         <h2>Sistemas Especiales</h2>
       </div>
     </div>
