--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -492,7 +492,7 @@
                 <strong>Correo:</strong><a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
               </p>
               <div class="social-links d-flex mt-3">
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
+                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
