--- a/about.html
+++ b/about.html
@@ -647,7 +647,7 @@
                 <a href="https://api.whatsapp.com/send?phone=5579290992" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/siarsa/about/" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a> 
               </div>
             </div>
           </div>
