--- a/blog.html
+++ b/blog.html
@@ -353,10 +353,10 @@
                 <strong>Correo:</strong><a href="mailto:mario.r@siarsa.com.mx" style="color: white;">mario.r@siarsa.com.mx</a><br>
               </p>
               <div class="social-links d-flex mt-3">
-                <a href="https://api.whatsapp.com/send?phone=5579290992" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>>
+                <a href="https://api.whatsapp.com/send?phone=5579290992" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/siarsa/about/" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
