--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
           <div class="col-lg-13 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
               <h3>Beneficios de SIARSA</h3>
-              <p class="texto-justificado">Contamos con los mejores expertos en la materia para poder ofrecerte calidad en nuestro servicio.</p>
+              <p class="texto-justificado">Nos Orgullecemos de ofrecer soluciones de climatización y refrigeración que brindan comodidad y tranquilidad, no importa la necesidad, estamos para ayudarte a encontrar la solución perfecta para ti.</p>
               <br>
               <ul>
                 <li class="texto-justificado">Los sistemas de airde acondicionado proporcionan un ambiente còmo en horagares, oficinas y comentarios, mejorar el bienestar de las personas aumentando la productividad laboral. </li>
