--- a/sistemasespeciales.html
+++ b/sistemasespeciales.html
@@ -83,7 +83,7 @@
     
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/los-diferentes-tipos-de-sistemas-de-aire-acondicionado-y-cual-es-el-mejor-para-ti-climagava.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-        <h2>Sistemas Especiales</h2>
+        <h2>Sistemas Especializados</h2>
       </div>
     </div>
 
@@ -216,7 +216,7 @@
 
             </article>
 
-            <div class="post-author d-flex align-items-center">
+            <!-- <div class="post-author d-flex align-items-center">
               <img src="img/logo-siarsa.png" class="rounded-circle flex-shrink-0" alt="">
               <div>
                 <h4>@siarsacompany</h4>
@@ -229,7 +229,7 @@
                  Síguenos en nuestras redes para mayor contacto.
                 </p>
               </div>
-            </div>
+            </div> -->
 
             <!-- <div class="comments">
 
