--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
             <h3>Identidad SIARSA</h3>
-            <p>Contamos con el personal capacitado al 100% para desempeñar las actividades </p>
+            <p class="texto-justificado">Nos enorgullecemos de ofrecer soluciones de climatización y refrigeración que brindan comodidad y tranquilidad. No importa cuál sea tu necesidad, estamos aquí para ayudarte a encontrar la solución perfecta. </p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
               <i class="bi bi-patch-check flex-shrink-0"></i>
