--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <li data-filter=".filter-remodeling">Mantenimiento</li>
             <li data-filter=".filter-construction">Servicio Técnico</li>
             <li data-filter=".filter-repairs">Optimización Energética</li>
-            <li data-filter=".filter-design">Sistemas Especiales</li>
+            <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
           </ul>
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
