--- a/index.html
+++ b/index.html
@@ -548,17 +548,17 @@
 
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">Todos</li>
+            <li data-filter=".filter-ventas">Venta</li>
             <li data-filter=".filter-remodeling">Mantenimiento</li>
             <li data-filter=".filter-construction">Servicio Técnico</li>
-            <li data-filter=".filter-repairs">Optimización Energética</li>
-            <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
+            <li data-filter=".filter-sistespe">Sistemas Especializados</li>
           </ul>
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ventas">
               <div class="portfolio-content h-100">
-                <img src="img/aire-acondicionado-decoracion-interior.jpg" class="img-fluid" alt="">
+                <img src="img/venta de aires.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Aire acondicionado</h4>
                   <!-- <a href="img/aire-acondicionado-decoracion-interior.jpg"
@@ -584,7 +584,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
                 <img src="img/electrico.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -597,7 +597,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ventas">
               <div class="portfolio-content h-100">
                 <img src="img/encendidoaire.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -610,9 +610,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ventas">
               <div class="portfolio-content h-100">
-                <img src="img/mujer-joven-tecnologia-casera.jpg" class="img-fluid" alt="">
+                <img src="img/venta-de-aires-acondicionado-en-santo-domingo-republica-dominicana.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Encendido de Aire Acondicionado</h4>
                   <p class="texto-justificado"></p>
@@ -625,7 +625,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-sistespe">
               <div class="portfolio-content h-100">
                 <img src="img/ventilacion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -639,11 +639,11 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
                 <img src="img/persona-que-trabaja-edificacion-construccion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Inspecciones Continuas</h4>
+                  <h4>Servicio Tecnico</h4>
                   <p class="texto-justificado"></p>
                   <!-- <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -653,7 +653,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
               <div class="portfolio-content h-100">
                 <img src="img/personas-tiro-medio-casco-trabajo.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -666,9 +666,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-sistespe">
               <div class="portfolio-content h-100">
-                <img src="img/sistema-refrigeracion-activa-aire.png" class="img-fluid" alt="">
+                <img src="img/sistemaespecializadorefri.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de Refrigeracion Industrial</h4>
                   <!-- <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
@@ -682,7 +682,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
               <div class="portfolio-content h-100">
-                <img src="img/sistrefri.jpg" class="img-fluid" alt="">
+                <img src="img/363.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Construction 3</h4>
                   <p class="texto-justificado"></p>
@@ -697,9 +697,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/repairs-3.jpg" class="img-fluid" alt="">
+                <img src="img/Eficiencia-Energetica-ciudades-SI.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Repairs 3</h4>
+                  <h4>Eficiencia Energetica</h4>
                   <!-- <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
@@ -708,11 +708,11 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-sistespe">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/design-3.jpg" class="img-fluid" alt="">
+                <img src="img/sistemarefrigeracionoespecial.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Design 3</h4>
+                  <h4>Sistema Especializdos</h4>
                   <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
@@ -720,6 +720,46 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
+              <div class="portfolio-content h-100">
+                <img src="img/servtecnico.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Servicio Tecnico</h4>
+                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="project-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
+              <div class="portfolio-content h-100">
+                <img src="img/240-640w.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Servicio Tecnico </h4>
+                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="project-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>      
+            
+            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
+              <div class="portfolio-content h-100">
+                <img src="img/instalacion-de-aire-acondicionado.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Servicio Tecnico </h4>
+                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="project-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>     
+
 
           </div><!-- End Projects Container -->
 
