--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
 
       </div> -->
     
-      <h1 class="text-center">Equipos de las mejores arcas</h1>
+      <h1 class="text-center">Equipos de las mejores marcas</h1>
 
     <center> <img class="img-fluid" src="img/marcas-aires.png"></center>
       
