--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
               <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
-              <li><a href="sistemasespeciales.html">Sistemas Especiales</a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contacto</a></li>
