--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
     
       <h1 class="text-center">Trabajamos con equipos de las mejores marcas</h1>
 
-    <img class="img-fluid" src="img/marcas-aires.png">
+    <center> <img class="img-fluid" src="img/marcas-aires.png"></center>
       
 
   
