--- a/optimizacion.html
+++ b/optimizacion.html
@@ -502,6 +502,8 @@
               <li><a href="about.html">Nosotros</a></li>
               <li><a href="services.html">Servicios</a></li>
               <li><a href="contact.html">Contacto</a></li>
+              <li><a href="politica-privacidad.html">Políticas de Privacidad</a></li>
+
             </ul>
           </div>
 
