--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -86,7 +86,7 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/candadoteclado.jpeg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Política de Privacidad</h2>
+        <h2>Políticas de Privacidad</h2>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -126,7 +126,7 @@
 
           <div class="col-lg-12">
             <div class="portfolio-description">
-              <h1 class="">Política de Privacidad</h1>
+              <h1 class="">Políticas de Privacidad</h1>
               <br>
               <p class="texto-justificado">
                 <strong>SIARSA</strong> , Es responsable de recabar sus datos personales, del uso que se le dé a los mismos y de su protección, Su información personal será utilizada para promover los 
