--- a/about.html
+++ b/about.html
@@ -108,14 +108,15 @@
           <div class="col-lg-7">
             <h2></h2>
             <div class="our-story">
-              <h3>Sobre Nosotros</h3>
-              <p class="texto-justificado">Nace bajo la necesidad de controlar las condiciones ambientales se volvió esencial para la implementación de mejores sistemas.</p>
-              <ul>
+              <h3>Alcance</h3>
+              <p class="texto-justificado">Contamos con ingenieros con conocimiento de nomrmatividades TIF, HACCP, NOM, NAFA (Asociación Nacional de filtración de Aire-USA); y personal calificado
+                con más de 25 años de experencia en el medio.</p>
+              <!-- <ul>
                 <li><i class="bi bi-check-circle"></i> <span>Contamos con las mejores estrategias de logística</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Distribución de equipos de alta tecnología</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>Contamos instalación de Aire acondicionado en ambientes residenciales y comerciales e industriales</span></li>
-              </ul>
-              <p class="texto-justificado">SIARSA se destaca por su contribución a los sistemas de aire acondicionado desarrollando e inovando en sistemas más eficientes y silenciosos.</p>
+              </ul>IA -->
+              <p class="texto-justificado">Construcción , Servicio y mantenimiento industrial a naves secas de congelación y conservación, servicios de ventilación y extración y aire acondicionado de hogar e industrial con personal calificacdo y certificado.</p>
 
               <!-- <div class="watch-video d-flex align-items-center position-relative">
                 <i class="bi bi-play-circle"></i>
@@ -201,7 +202,7 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a class="stretched-link">Misión</a></h4>
-                <p class="texto-justificado">Nuestra misión en SIARSA es proporcionar soluciones de aire acondicionado y sistemas de refrigeración de alta calidad y eficiencia para nuestros clientes. Nos dedicamos a crear ambientes confortables y seguros, tanto en hogares como en empresas, mediante la innovación tecnológica y un servicio excepcional. Estamos comprometidos con la satisfacción del cliente, la sostenibilidad ambiental y el desarrollo continuo de nuestros empleados y socios comerciales.</p>
+                <p class="texto-justificado">Una empresa de alto nivel profesional técnico, abocada a cumplir las necedidades y urgencias de sus clientes y satisfacertodos sus requerimientos, para lograr el máximo rendimiento, reconocimiento y recomendaciones en empresas y negocios.</p>
               </div>
             </div>
 
@@ -209,7 +210,14 @@
               <i class="bi bi-patch-check flex-shrink-0"></i>
               <div>
                 <h4><a class="stretched-link">Visión</a></h4>
-                <p class="texto-justificado">Nos esforzamos por ser líderes en el mercado de aire acondicionado y sistemas de refrigeración, reconocidos por nuestra excelencia en productos y servicios. Nos visualizamos como una empresa que impulsa la innovación en tecnologías de climatización, contribuyendo así a un mundo más cómodo y sostenible. Aspiramos a establecer relaciones a largo plazo con nuestros clientes, basadas en la confianza mutua y el respeto, y a ser un empleador preferido que fomente el crecimiento profesional y personal de nuestros empleados. Además, nos comprometemos a ser responsables con el medio ambiente, adoptando prácticas empresariales ecoamigables y promoviendo la conciencia ambiental en todas nuestras operaciones y productos.</p>
+                <p class="texto-justificado">Ser una empresa líder en el mercado de servicio y construcción de naves industriales y refrigeradas , siendo competitivos y brindando siempre la mejor calidad a nuestros clientes; que al pensar en las soluciones piensen 
+                  en nosotros, cuidando y capacitando siempre a nuestro personal para brindar siempre la mejor atención.
+                </p>
+              <br>
+              <p class="texto-justificado">
+                Convertirnos en una empresa líder y competitiva  que satisfaga las necesidades del consumidor asi como mejorar nuestros y servicios a través de los avances tecnológicos, implementando la mejora continua como medio hacia la experiencia y que esta forme parte de la cultura
+                de nuestro personal.
+              </p>
               </div>
             </div>
 
@@ -246,7 +254,7 @@
               <p class="texto-justificado">Nos Orgullecemos de ofrecer soluciones de climatización y refrigeración que brindan comodidad y tranquilidad, no importa la necesidad, estamos para ayudarte a encontrar la solución perfecta para ti.</p>
               <br>
               <ul>
-                <li class="texto-justificado">Los sistemas de airde acondicionado proporcionan un ambiente còmo en horagares, oficinas y comentarios, mejorar el bienestar de las personas aumentando la productividad laboral. </li>
+                <li class="texto-justificado">Los sistemas de airde acondicionado proporcionan un ambiente cómo en horagares, oficinas y comentarios, mejorar el bienestar de las personas aumentando la productividad laboral. </li>
                 <br>
                 <li class="texto-justificado">Las empresas especializadas pueden asesorar sobre equipos eficientes energéticamente, ayudando a los clientes a reducir sus facturas de energía.</li>
                 <br>
