--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           <div class="col-lg-10 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
               <h3>¿Porque elegir a SIARSA?</h3>
-              <h5>Tecnologìa Avanzada</h5>
+              <h5>Tecnología Avanzada</h5>
               <p class="texto-justificado">Incorporamos las últimas tecnologías en nuestros sistemas para garantizar un rendimiento óptimo y duradero. Desde sistemas de climatización inteligentes hasta controles remotos fáciles de usar, te ofrecemos lo mejor en innovación.</p>
               <h5>Silenciosos y sin Problemas</h5>
               <p class="texto-justificado">Nuestros aires acondicionados y sistemas de refrigeración son conocidos por su funcionamiento silencioso y sin problemas. Disfruta de un ambiente tranquilo y fresco sin molestias ruidosas ni interrupciones.</p>
