--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,12 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
               <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
-              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>>
+              <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </li>
           <li><a href="contact.html" class="active">Contacto</a></li>
+          <li><a href="politica-privacidad.html" target="_blank">Privacidad</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -240,7 +242,7 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
               <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
-              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </div>
 
