--- a/optimizacion.html
+++ b/optimizacion.html
@@ -72,6 +72,7 @@
             </ul>
           </li>
           <li><a href="contact.html">Contacto</a></li>
+          <li><a href="politica-privacidad.html">Privacidad</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -514,7 +515,7 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
               <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
-              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </div>
 
