--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -49,7 +49,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <!-- <li><a href="services.html">Servicios</a></li> -->
           <!-- <li><a href="projects.html">Projects</a></li> -->
@@ -71,10 +71,12 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
               <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
               <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contacto</a></li>
+          <li><a href="politica-privacidad" class="active">Privacidad</a></li>
         </ul>
       </nav><!-- .navbar -->
     </div>
@@ -210,7 +212,7 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
               <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
-              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </div>
 
