--- a/services.html
+++ b/services.html
@@ -514,7 +514,7 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
               <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
-              <li><a href="sistemasespeciales.html">Sistems Especializados</a></li>
+              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </div>
           
