--- a/blog.html
+++ b/blog.html
@@ -74,8 +74,8 @@
               <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </li>
+          <li><a href="politica-privacidad.html">Privacidad</a></li>
           <li><a href="contact.html">Contacto</a></li>
-          <li><a href="politica-privacidad.html"></a>Privacidad</li>
         </ul>
       </nav><!-- .navbar -->
 
