--- a/optimizacion.html
+++ b/optimizacion.html
@@ -68,11 +68,12 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
               <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="disenoyconsultoria.html">Diseño y Consultoía</a></li>
               <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contacto</a></li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
       </nav><!-- .navbar -->
 
