--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <!-- <li><a href="services.html">Servicios</a></li> -->
-          <!-- <li><a href="projects.html">Projects</a></li> -->
-          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -74,9 +71,12 @@
               <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contacto</a></li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
+        <!-- &nbsp;
+        &nbsp; 
+        <a class="btn btn-primary" href="contact.html" role="button">Solicita una Cotización</a> -->
       </nav><!-- .navbar -->
 
     </div>
@@ -93,7 +93,7 @@
             <img class="img-fluid" src="img/logo-siarsa.png">
             <!-- <p data-aos="fade-up">Expertos en HVAC & R.</p> -->
             <br>
-            <a data-aos="fade-up" data-aos-delay="200" href="contact.html" class="btn-get-started">Contacto</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="contact.html" class="btn-get-started">Solicita una Cotización</a>
           </div>
         </div>
       </div>
