--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
           </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Menu</h4>
+            <h4>Menú</h4>
             <ul>
               <li><a href="index.html">Inicio</a></li>
               <li><a href="about.html">Nosotros</a></li>
