--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -118,7 +118,7 @@
               <div class="content">
                 <h2 class="text-center"> Inspección y Diagnóstico</h2>
                 <p class="texto-justificado">           
-                   <strong>Evaluación Inicial:</strong> Los técnicos especializados realizan una inspección completa del sistema para identificar posibles problemas y determinar el estado general del equipo.
+                   <strong>Evaluación Inicial:</strong> Nuestros técnicos especializados realizan una inspección completa del sistema para identificar posibles problemas y determinar el estado general del equipo.
               </p>
               <p class="texto-justificado"><strong>Diagnóstico:</strong> Se lleva a cabo un análisis detallado para identificar cualquier fallo en el funcionamiento, pérdida de eficiencia energética o desgaste de componentes.</p>      
                 <!-- <blockquote>
