--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
               <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
               <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
-              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
+              <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
