--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
               <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
               <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
               <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
-              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
+              <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
@@ -381,7 +381,7 @@
               <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
               <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
               <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
-              <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li>
+              <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </div>
 
