--- a/about.html
+++ b/about.html
@@ -737,10 +737,9 @@
         <div class="copyright">
           &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados. <script>document.write(new Date().getFullYear())</script>
         </div>
-        <!-- <div class="credits">
-  
-  
-        </div> -->
+        <div class="credits">
+          Consulta Nuestro<a href="politica-privacidad.html">Aviso de Privacidad</a> 
+        </div>
       </div>
     </div>
 
