--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
               <li><a href="about.html">Nosotros</a></li>
               <li><a href="services.html">Servicios</a></li>
               <li><a href="contact.html">Contacto</a></li>
-              <li><a href="politica-privacidad.html">Políticas de Privacidad</a></li>
+              <li><a href="politica-privacidad.html">Privacidad</a></li>
             </ul>
           </div>
 
