--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -529,13 +529,16 @@
         </div>
       </div>
 
-    <div class="footer-legal text-center position-relative">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
+      <div class="footer-legal text-center position-relative">
+        <div class="container">
+          <div class="copyright">
+            &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
+          </div>
+          <div class="credits">
+            Consulta Nuestro<a href="politica-privacidad.html">Aviso de Privacidad</a> 
+          </div>
         </div>
       </div>
-    </div>
 
   </footer>
   
