--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -247,7 +247,10 @@
       <div class="footer-legal text-center position-relative">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados. <script>document.write(new Date().getFullYear())</script>
+            &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
+          </div>
+          <div class="credits">
+            Consulta Nuestro<a href="politica-privacidad.html">Aviso de Privacidad</a> 
           </div>
         </div>
       </div>
