--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -540,13 +540,17 @@
 
         </div>
       </div>
-    <div class="footer-legal text-center position-relative">
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.  <script>document.write(new Date().getFullYear())</script>
+      
+      <div class="footer-legal text-center position-relative">
+        <div class="container">
+          <div class="copyright">
+            &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
+          </div>
+          <div class="credits">
+            Consulta Nuestro<a href="politica-privacidad.html">Aviso de Privacidad</a> 
+          </div>
         </div>
       </div>
-    </div>
 
   </footer>
   
